Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18612

White spaces at the end of Arabic text line break the Text and TextEdit horizontal alignment and selection

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.0
    • 4.7.4
    • GUI: Text handling
    • None
    • 224226727f07e8940e0d3131fe7587b11cc4a6ca

    Description

      Qt text painting routines currently draw the wrapped multi-line right-to-left incorrectly. It seems that the white spaces at the end of the text line affect the positioning (alignment, painting of the text selection region) of the whole text line, breaking the text painting. See attached screenshots and QML files for an example. The problem affects both the Text and TextEdit elements.

      Attachments

        1. arabictextalignment.png
          6 kB
          Joona Petrell
        2. arabictextalignment.qml
          3 kB
          Joona Petrell
        3. arabictextselection.png
          4 kB
          Joona Petrell
        4. arabictextselection.qml
          2 kB
          Joona Petrell
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jiang Jiang Jiang
            jpetrell Joona Petrell
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes